--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,254 +1,327 @@
 body {
-    margin: 0; 
-    font-family: "Source Sans Pro", sans-serif; 
-  }
+  margin: 0; 
+  font-family: "Source Sans Pro", sans-serif; 
+}
   
-  .header {
-    padding: 0 45px; 
-    background-color: #a60303; 
-    /* #a60303 - original red */
-    /* #dc3545 - Danger */
-    color: #FFF; 
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    flex-wrap: wrap; 
-  }
-  
-  .nav a {
-    color: #FFF; 
-    text-decoration: none; 
-    display: block; 
-    transition: all 0.3s ease-out; 
-  }
-  
-  .nav a:hover {
-    color: #d48e8e; 
-    transform: rotate(6deg); 
-  }
-  
-  .nav {
-    list-style: none; 
-    margin: 0; 
-    padding: 0; 
-    display: flex; 
-  }
-  
-  .nav li{
-    margin-left: 20px; 
-  }
-  
-  .hero {
-    background-color: #c2c2c2; 
-    /* #757575 */
-    /* #f5d3a9 */
-    padding: 60px 45px; 
-    display: flex; 
-    justify-content: center; 
-    min-height: 100vh; 
-  }
-  
-  .hero-inner{
-    max-width: 600px; 
-    text-align: center;
-  }  
-
-  .hero-inner-index{
-    text-align: center;
-  }  
-
-  .hero-inner-about{
-    max-width: 600px; 
-    justify-content: center;
-    text-align: center; 
-  } 
-
-  .about{
-    background-color: #c2c2c2; 
-    /* #757575 */
-    /* #f5d3a9 */
-    justify-content: center;
-  } 
-
-  .bullets-inside {
-    align-items: left; 
-    justify-content: center;
-    list-style-position: inside;
-  }
- 
-  .hero-inner-services{
-    max-width: 500px; 
-  } 
-
-  .hero-inner-project{
-    max-width: 600px; 
-  } 
-
-  .hero-inner-contact{
-    max-width: 400px; 
-  }  
-
-  .hero h1 {
-    font-weight: normal; 
-    font-size: 4rem; 
-    margin: 0; 
-  }
-  
-  .hero h2 {
-    font-weight: normal; 
-    font-size: 1.5rem; 
-    margin: 0; 
-  }
-  
-  .hero p {
-    font-size: 1.18rem; 
-    line-height: 1.2; 
-    margin: 1; 
-  }
-
-  .button {
-    background-color: #a60303; 
-    /* #a60303 - original red */
-    /* #dc3545 - Danger */
-    color: #FFF; 
-    text-decoration: none; 
-    padding: 12px 20px; 
-    border-radius: 8px; 
-    font-size: 1.18rem; 
-    display: inline-block; 
-  }
-  
-  .button:hover {
-    color: #d48e8e; 
-    transform: rotate(6deg); 
-  }
-
-  .image img {
-      width: 100%; 
-  }
-
-  .image { 
-    display: grid; 
-    grid-row-gap: 45px; 
-    padding: 60px 0px; 
-    display: flex;
+.header {
+  padding: 0px 45px; 
+  background-color: #a60303; 
+  /* #a60303 - original red */
+  /* #CD4137 - Wrench */
+  /* #dc3545 - Danger */
+  color: #FFF; 
+  display: flex; 
+  justify-content: center; /* space-between */
+  align-items: center; 
+  flex-wrap: wrap; 
+  text-align: center;
 }
 
-  .features {
-    background-color: #999999; 
-    /* #757575 */
-    /* #f7adad */
-    padding: 60px 45; 
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
-    flex-wrap: wrap; 
-  }
+.navbar {
+  color: #FFF; 
+  text-align: center; 
+  display: flex; 
+  align-items: center; 
+  text-align: center;
+  flex-wrap: wrap;
+  word-wrap: break-word;
+  width: 100%; 
+}
 
-  .grid {
-    background-color: #999999; 
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+.row.index {
+  flex-wrap: wrap; 
+  word-wrap: break-word; 
+}
 
-  .row {
-    background-color: #999999; 
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
-    flex-wrap: wrap; 
-    --bs-gutter-x: 0;
-    --bs-gutter-y: 0;
-  }
+.navbar-brand {
+  color: #FFF; 
+  padding: 25px 45px; 
+  display: flex; 
+  transition: all 0.3s ease-out; 
+  overflow: visible; 
+  word-wrap: break-word;
+  font-size: 40px;
+  justify-content: center;
+}
 
-  .col-sm-6 {
-    background-color: #999999; 
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 20px; 
-  }
+.dropdown {
+  justify-content: right;
+  text-align: right;
+  display: flex;
+  float: right;
+}
 
-  .card-header { 
-    background-color: #a60303; 
-    /* #a60303 - original red */
-    /* #dc3545 - Danger */
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+.dropdown-menu {
+  justify-content: right; 
+  text-align: right;
+  float: right; 
+  background-color: #a60303; 
+}
 
-  .card-body { 
-    align-items: stretch;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+.dropdown-item {
+  color: #FFF; 
+}
 
-  .card-body p{ 
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
-    flex-wrap: wrap;
-    text-align: center; 
-  }
-  
-  /*
-  .features-inner {
-    max-width: 1200px; 
-    margin: 0 auto; 
-    display: grid; 
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-    grid-column-gap: 45px; 
-    grid-row-gap: 45px; 
-    padding: 3em;
-  }
-  
-  .featured-item h3 {
-    color: #a60303; 
-    /* #a60303 - original red */
-    /* #dc3545 - Danger *//*
-    font-size: 1.5rem; 
-    font-weight: normal; 
-    margin: 0; 
-  }
-  
-  .featured-item p {
-    margin: 0; 
-    line-height: 1.6; 
-    color: #000000; 
-  }
-  */
+.btn {
+  color: #FFF; 
+  text-decoration: none; 
+  display: block; 
+  transition: all 0.3s ease-out; 
+}
 
-  .footer {
-    text-align: center; 
-    padding: 1.5em; 
-    background-color: #a60303; 
-    /* #a60303 - original red */
-    /* #dc3545 - Danger */
-    color: #FFF; 
-    font-size: .9rem; 
-    margin: 0;
-    display: flex; 
-    justify-content: center;
-    align-items: stretch;
-    flex-wrap: wrap;
-  }
+/* .nav a:hover {
+  color: #d48e8e; 
+  transform: rotate(6deg); 
+} */ 
 
-  .footer p {
-    text-align: center; 
-    padding: 1.5em; 
-    background-color: #a60303; 
-    /* #a60303 - original red */
-    /* #dc3545 - Danger */
-    color: #FFF; 
-    font-size: .9rem; 
-    margin: 0;
-    display: flex; 
-    justify-content: center;
-    align-items: stretch;
-    flex-wrap: wrap;
-  }
+.nav {
+  list-style: none; 
+  margin: 0; 
+  padding: 0; 
+  display: flex; 
+}
+
+.nav li{
+  margin-left: 20px; 
+}
+
+.hero {
+  background-color: #c2c2c2; 
+  /* #c2c2c2 - light gray/blue */
+  /* #757575 */
+  /* #f5d3a9 */
+  padding: 60px 45px; 
+  display: flex; 
+  justify-content: center;  
+  min-height: 100vh; 
+  width: 100%; 
+}
+
+.hero-inner{
+  max-width: 600px; 
+  text-align: center;
+  width: 100%;
+}  
+
+.hero-inner-index{
+  text-align: center;
+}  
+
+.grid-index {
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.Pipe-Wrench {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Text {
+  padding: 50px 100px;
+}
+
+.hero-inner-about{
+  max-width: 600px; 
+  justify-content: center;
+  text-align: center; 
+} 
+
+.about{
+  background-color: #c2c2c2; 
+  /* #757575 */
+  /* #f5d3a9 */
+  justify-content: center;
+} 
+
+.bullets-inside {
+  align-items: left; 
+  justify-content: center;
+  list-style-position: inside;
+}
+
+.hero-inner-services{
+  max-width: 500px; 
+} 
+
+.hero-inner-project{
+  max-width: 600px; 
+} 
+
+.hero-inner-contact{
+  max-width: 400px; 
+}  
+
+.hero h1 {
+  font-weight: normal; 
+  font-size: 4rem; 
+  margin: 0; 
+}
+
+.hero h2 {
+  font-weight: normal; 
+  font-size: 1.5rem; 
+  margin: 0; 
+}
+
+.hero p {
+  font-size: 1.18rem; 
+  line-height: 1.2; 
+  margin: 1; 
+}
+
+.button {
+  background-color: #a60303; 
+  /* #a60303 - original red */
+  /* #CD4137 - Wrench */
+  /* #dc3545 - Danger */
+  color: #FFF; 
+  text-decoration: none; 
+  padding: 12px 20px; 
+  border-radius: 8px; 
+  font-size: 1.18rem; 
+  display: inline-block; 
+}
+
+.button:hover {
+  color: #d48e8e; 
+  transform: rotate(6deg); 
+}
+
+.image img {
+  width: 100%; 
+}
+
+.image { 
+  display: grid; 
+  grid-row-gap: 45px; 
+  padding: 60px 0px; 
+  display: flex;
+  width: 100%; 
+}
+
+.features {
+  background-color: #999999; 
+  /* #757575 */
+  /* #f7adad */
+  padding: 60px 45; 
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap; 
+}
+
+.grid-features {
+  background-color: #999999; 
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.row {
+  background-color: #999999; 
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap; 
+  --bs-gutter-x: 0;
+  --bs-gutter-y: 0;
+}
+
+.col-sm-6 {
+  background-color: #999999; 
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 20px; 
+}
+
+.card-header { 
+  background-color: #a60303; 
+  /* #a60303 - original red */
+  /* #CD4137 - Wrench */
+  /* #dc3545 - Danger */
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.card-body { 
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.card-body p{ 
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-align: center; 
+}
+
+/*
+.features-inner {
+  max-width: 1200px; 
+  margin: 0 auto; 
+  display: grid; 
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+  grid-column-gap: 45px; 
+  grid-row-gap: 45px; 
+  padding: 3em;
+}
+
+.featured-item h3 {
+  color: #a60303; 
+  /* #a60303 - original red */
+  /* #dc3545 - Danger *//*
+  font-size: 1.5rem; 
+  font-weight: normal; 
+  margin: 0; 
+}
+
+.featured-item p {
+  margin: 0; 
+  line-height: 1.6; 
+  color: #000000; 
+}
+*/
+
+.footer {
+  text-align: center; 
+  padding: 1.5em; 
+  background-color: #a60303; 
+  /* #a60303 - original red */
+  /* #CD4137 - Wrench */
+  /* #dc3545 - Danger */
+  color: #FFF; 
+  font-size: .9rem; 
+  margin: 0;
+  display: flex; 
+  justify-content: center;
+  align-items: stretch;
+  flex-wrap: wrap;
+}
+
+.footer p {
+  text-align: center; 
+  padding: 1.5em; 
+  background-color: #a60303; 
+  /* #a60303 - original red */
+  /* #CD4137 - Wrench */
+  /* #dc3545 - Danger */
+  color: #FFF; 
+  font-size: .9rem; 
+  margin: 0;
+  display: flex; 
+  justify-content: center;
+  align-items: stretch;
+  flex-wrap: wrap;
+}
