--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,27 @@
+@media (min-width: 768px) 
+ {
+    body
+    {
+        font-size: 17px; 
+    }
+    h1
+    {
+        font-size:24px;
+    }
+ }
+
+ @media (max-width: 768px) 
+ {
+    body
+    {
+        font-size: 22px; 
+    }
+    h1
+    {
+        font-size:44px;
+    }
+ }
+
 body {
   margin: 0; 
   font-family: "Source Sans Pro", sans-serif; 
